k8s/base/domotica/ha-mcp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-mcp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ha-mcp.nicolatomassoni.it
      secretName: ha-mcp-tls
  rules:
  - host: "ha-mcp.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ha-mcp
            port:
              number: 8086
